<?xml version="1.0" encoding="utf-8"?><!--suppress XmlUnusedNamespaceDeclaration -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/poster"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/poster_description"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                app:layout_constraintTop_toBottomOf="@id/poster" />

            <LinearLayout
                android:id="@+id/details_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:showDividers="middle"
                android:weightSum="1"
                app:layout_constraintTop_toBottomOf="@id/title">

                <TextView
                    android:id="@+id/release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <TextView
                    android:id="@+id/vote_average"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <Button
                    android:id="@+id/trailer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trailer"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favorite" />

            </LinearLayout>

            <TextView
                android:id="@+id/plot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/details_container" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/review_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                app:layout_constraintTop_toBottomOf="@id/plot" />

            <FrameLayout
                android:id="@+id/progress_bar_container"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/poster">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>